--- a/dashboard.css
+++ b/dashboard.css
@@ -31,11 +31,116 @@
 form{
     margin-left: 500px;
 }
-/* .try_agin{
-    color: #fff;
-    background: #000;
-    width: 250px;
-    height: 250px;
+.try_agin{
+
+    margin-top: 350px;
+}
+.question {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.answers {
+    margin-bottom: 15px;
+    text-align: left;
+    display: inline-block;
+}
+
+.answers label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+#next {
+    position: absolute;
+    cursor: pointer;
+    top: 270px;
+    right: 200px;
+    background-color: #bf5dec;
+    color: white;
+    padding: 10px;
+
+}
+
+#previous {
+    position: absolute;
+    cursor: pointer;
+    top: 270px;
+    right: 276px;
+    background-color: #492894;
+    color: white;
+    padding: 10px;
+
+}
+
+#submit {
+    position: absolute;
+    cursor: pointer;
+    top: 350px;
+    right: 170px;
+}
+
+#correction {
+    top: 300px;
     text-align: center;
-    margin-top: 25px;
-} */
+    font-size: 20px;
+    left: 100px;
+    position: absolute;
+}
+
+button:hover {
+    background-color: #90ee90;
+}
+
+.header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+}
+
+.slide {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0s;
+}
+
+.active-slide {
+    opacity: 1;
+    z-index: 2;
+}
+
+.quiz-container {
+    position: absolute;
+    height: 350px;
+    width: 700px;
+    display: block;
+    margin-top: 40px;
+    border: 2px solid #90ee90;
+    overflow: auto;
+    top: 70px;
+    left: 100px;
+    text-align: left;
+
+}
+
+
+#number {
+    position: absolute;
+    left: 50px;
+    top: 80px;
+    width: 200px;
+    height: 100px;
+    color: black;
+    size: 100px
+}
+
+/* Style the footer */
+.footer {
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-align: center;
+}
